# cpp-libuuid

./: .gitlab-ci.yml  README.md  meson.build  meson_options.txt
libuuid/: meson.build
libuuid/include/libuuid/: UUID.hpp
test/: meson.build
test/tests/: UUIDtest.cpp
